# openvino

./: .gitignore
cmake/packaging/: npm.cmake
samples/js/: .gitignore
src/bindings/js/: CMakeLists.txt
src/bindings/js/common/lib/: index.ts  types.ts
src/bindings/js/node/: .dockerignore  CMakeLists.txt  Dockerfile  binding.gyp  llm_sample.js  package-lock.json  package.json  tsconfig.json
src/bindings/js/node/include/: async_infer.hpp  infer_request.hpp
src/bindings/js/node/lib/: addon.ts  index.ts
src/bindings/js/node/ov_runtime/lib/intel64/: libopenvino.so.2310  libopenvino_ir_frontend.so.2310  libopenvino_onnx_frontend.so.2023.1.0  libopenvino_paddle_frontend.so.2023.1.0  libopenvino_paddle_frontend.so.2310  libopenvino_pytorch_frontend.so.2310  libopenvino_tensorflow_frontend.so.2310  libopenvino_tensorflow_lite_frontend.so.2310
src/bindings/js/node/ov_runtime/lib/intel64/pkgconfig/: openvino.pc
src/bindings/js/node/ov_runtime/runtime/lib/intel64/: libopenvino_c.so.2023.1.0  libopenvino_c.so.2310  libopenvino_ir_frontend.so.2023.1.0  libopenvino_onnx_frontend.so.2310  libopenvino_pytorch_frontend.so.2023.1.0  libopenvino_tensorflow_frontend.so.2023.1.0  libopenvino_tensorflow_lite_frontend.so.2023.1.0  libpugixml.so.1
src/bindings/js/node/scripts/: download_runtime.js
src/bindings/js/node/src/: addon.cpp  async_infer.cpp  infer_request.cpp
src/bindings/js/wasm/: webpack.config.js
src/bindings/js/wasm/include/: session.h
src/bindings/js/wasm/lib/: types.ts  wasm-model.ts
src/bindings/js/wasm/src/: core.cpp  session.cpp
(+38 files in other folders)
